--- a/frontend/src/pages/user/employee.css
+++ b/frontend/src/pages/user/employee.css
@@ -17,7 +17,7 @@
   content: '';
   position: absolute;
   inset: 0;
-  background-image: url('img_2.png');
+  background-image: url('/img_2.png');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
